--- a/signup.html
+++ b/signup.html
@@ -258,7 +258,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <script>
         // Initialize Supabase (REPLACE with your keys!)
-        const supabaseUrl = 'https://your-project.supabase.co';
+        const supabaseUrl = 'https://zycdmsexndyxcwfadfyp.supabase.co';
         const supabaseKey = 'sb_publishable_XUX6iEK_gyl8IdCN1rqefw_vMxGe803';
         const supabase = window.supabase.createClient(supabaseUrl, supabaseKey);
         
