--- a/dashboard.html
+++ b/dashboard.html
@@ -79,7 +79,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <script>
         // Initialize Supabase (SAME keys as signup.html)
-        const supabaseUrl = 'https://your-project.supabase.co';
+        const supabaseUrl = 'https://zycdmsexndyxcwfadfyp.supabase.co';
         const supabaseKey = 'sb_publishable_mdVWT3_kZP5R3br_Sq6D7g_qHXTPnl0';
         const supabase = window.supabase.createClient(supabaseUrl, supabaseKey);
         
